; ModuleID = '/home/carl/AnghaBench/tig/src/extr_options.c_parse_string.c'
source_filename = "/home/carl/AnghaBench/tig/src/extr_options.c_parse_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ERROR_UNMATCHED_QUOTATION = common dso_local global i32 0, align 4
@SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i64)* @parse_string to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @parse_string(i8* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  %9 = load i8*, i8** %6, align 8
  %10 = call i32 @strlen(i8* %9)
  store i32 %10, i32* %8, align 4
  %11 = load i8*, i8** %6, align 8
  %12 = getelementptr inbounds i8, i8* %11, i64 0
  %13 = load i8, i8* %12, align 1
  %14 = sext i8 %13 to i32
  switch i32 %14, label %38 [
    i32 34, label %15
    i32 39, label %15
  ]

15:                                               ; preds = %3, %3
  %16 = load i32, i32* %8, align 4
  %17 = icmp eq i32 %16, 1
  br i1 %17, label %31, label %18

18:                                               ; preds = %15
  %19 = load i8*, i8** %6, align 8
  %20 = load i32, i32* %8, align 4
  %21 = sub nsw i32 %20, 1
  %22 = sext i32 %21 to i64
  %23 = getelementptr inbounds i8, i8* %19, i64 %22
  %24 = load i8, i8* %23, align 1
  %25 = sext i8 %24 to i32
  %26 = load i8*, i8** %6, align 8
  %27 = getelementptr inbounds i8, i8* %26, i64 0
  %28 = load i8, i8* %27, align 1
  %29 = sext i8 %28 to i32
  %30 = icmp ne i32 %25, %29
  br i1 %30, label %31, label %33

31:                                               ; preds = %18, %15
  %32 = load i32, i32* @ERROR_UNMATCHED_QUOTATION, align 4
  store i32 %32, i32* %4, align 4
  br label %45

33:                                               ; preds = %18
  %34 = load i8*, i8** %6, align 8
  %35 = getelementptr inbounds i8, i8* %34, i64 1
  store i8* %35, i8** %6, align 8
  %36 = load i32, i32* %8, align 4
  %37 = sub nsw i32 %36, 2
  store i32 %37, i32* %8, align 4
  br label %38

38:                                               ; preds = %3, %33
  %39 = load i8*, i8** %5, align 8
  %40 = load i64, i64* %7, align 8
  %41 = load i8*, i8** %6, align 8
  %42 = load i32, i32* %8, align 4
  %43 = call i32 @string_ncopy_do(i8* %39, i64 %40, i8* %41, i32 %42)
  %44 = load i32, i32* @SUCCESS, align 4
  store i32 %44, i32* %4, align 4
  br label %45

45:                                               ; preds = %38, %31
  %46 = load i32, i32* %4, align 4
  ret i32 %46
}

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @string_ncopy_do(i8*, i64, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
